# Alfred

./: .env.example  .gitignore  .mcp.json  DEPLOYMENT.md  Dockerfile  README.md  RECOVERY_PLAN.md  alfred_cli.py  docker-compose.yml  pyproject.toml  requirements.txt
agent-zero1/: docker-compose.alfred.yml
agent-zero1/agents/alfred/: .env.template  Dockerfile  SOUL.md  requirements-integrations.txt
agent-zero1/agents/alfred/core/: __init__.py  daily_brief.py  orchestrator.py  state_manager.py  weekly_brief.py
agent-zero1/agents/alfred/extensions/agent_init/: _10_alfred_init.py
agent-zero1/agents/alfred/integrations/: __init__.py  calendar_adapter.py  gmail_adapter.py  google_calendar.py  instagram_scraper.py  manual_input.py  social_adapter.py  substack_scraper.py  twitter_scraper.py  whatsapp_adapter.py  youtube.py
agent-zero1/agents/alfred/memory/: __init__.py  optionality_register.py  pattern_registry.py  regret_memory.py  self_violation_log.py  threshold_map.py  values_hierarchy.py
agent-zero1/agents/alfred/prompts/: agent.system.main.memory_schema.md
agent-zero1/agents/alfred/tools/: __init__.py  audience_signals_extractor.py  content_manager.py  content_strategy_analyst.py  daily_brief.py  financial_sentinel.py  intake_agent.py  learning_curator.py  learning_distiller.py  learning_scout.py  patient_data_agent.py  relationship_nudge_agent.py  reputation_sentinel.py  research_agent.py  scheduling_agent.py  shipping_governor.py  social_metrics_harvester.py  social_triage.py  substack_agent.py  twitter_thread_agent.py  weekly_brief.py  world_radar.py  youtube_script_agent.py
agent-zero1/conf/: model_providers.yaml
agent-zero1/data/alfred/briefs/: morning_2026-01-15.json
agent-zero1/python/api/: api_message.py  csrf_token.py
docs/: alfred_architecture.md
evals/: __init__.py  agent_evals.py  behavioral.py  tracing.py
gateway/: alfred-gateway.service  check_conflicts.sh  config.example.yaml  config.yaml  deploy.sh  diagnostic_test.py  gateway.py  requirements.txt  router.py
gateway/adapters/: __init__.py  base.py  discord_adapter.py  signal_adapter.py  telegram_adapter.py
gateway/tests/: test_discord_adapter.py  test_router.py  test_signal_adapter.py  test_telegram_adapter.py
gateway/utils/: __init__.py
scripts/: select_provider.py  test_select_provider.py
test/: .gitignore
tests/: __init__.py  conftest.py
tests/test_memory/: __init__.py  test_pattern_registry.py  test_threshold_map.py
tests/test_tools/: __init__.py  test_financial_sentinel.py  test_intake_agent.py  test_reputation_sentinel.py  test_shipping_governor.py
